fixed stripe image

--- a/project/Speech_Debate_Club_Application/client/views/signup.html
+++ b/project/Speech_Debate_Club_Application/client/views/signup.html
@@ -123,7 +123,7 @@ We use Paypal and Stripe software to power our payment process, which means our 
       <input type="submit" id="submitBtn" class="btn btn-success btn-block" data-loading-text="Setting up your membership.." style="margin-top: 40px; margin-bottom: 20px;" value="sign me up for 2015-2016 EVHS SPEECH & DEBATE CLUB ">
     </div> <!-- end.form-group -->
 
-    <img src="/img/stripelogo.png">
+    <img src="https://raw.githubusercontent.com/bananabot1024/EVSDWebsite/master/project/Speech_Debate_Club_Application/public/img/stripelogo.png">
 
   </form>
 </template>
