--- a/project/Speech_Debate_Club_Application/client/views/signup.html
+++ b/project/Speech_Debate_Club_Application/client/views/signup.html
@@ -1,4 +1,5 @@
 <template name="signup">
+  <link rel="stylesheet" href="signup.css">
   <form id="application-signup" class="signup">
   <h3 class = "page-header">Evergreen Valley High School Speech and Debate <br> 2015-2016 Official Sign Up Form </h3>
     <h4 class="page-header">STUDENT INFORMATION</h4>
