--- a/project/Speech_Debate_Club_Application/client/views/signup.html
+++ b/project/Speech_Debate_Club_Application/client/views/signup.html
@@ -1,4 +1,5 @@
 <template name="signup">
+  <link rel="stylesheet" href="signup.css">
   <form id="application-signup" class="signup">
   <h3 class = "page-header">Evergreen Valley High School Speech and Debate <br> 2015-2016 Official Sign Up Form </h3>
     <h4 class="page-header">STUDENT INFORMATION</h4>
@@ -123,7 +124,7 @@ We use Paypal and Stripe software to power our payment process, which means our 
       <input type="submit" id="submitBtn" class="btn btn-success btn-block" data-loading-text="Setting up your membership.." style="margin-top: 40px; margin-bottom: 20px;" value="sign me up for 2015-2016 EVHS SPEECH & DEBATE CLUB ">
     </div> <!-- end.form-group -->
 
-    <img src="/img/stripelogo.png">
+    <img src="https://raw.githubusercontent.com/EVSD/EVSDWebsite/ui/project/Speech_Debate_Club_Application/public/img/stripelogo.png">
 
   </form>
 </template>
