--- a/project/client/views/signup.html
+++ b/project/client/views/signup.html
@@ -107,9 +107,10 @@
     </div>
 
     <h4 class="page-header">Waiver</h4>
-    Please read the following waiver: <a href= "https://drive.google.com/file/d/0B0GF5CUxnsQPRE5Yb2NZZGV3Zmc/view" target= "_blank"> Waiver </a>
+    Please read the following <a href= "https://drive.google.com/file/d/0B0GF5CUxnsQPRE5Yb2NZZGV3Zmc/view" target= "_blank">waiver.</a>
     <br>
-    <input type = "checkbox" name = "waiver" value = "waiver"> We, the student registering and the parent/guardian registering, will fill out, sign, and submit through this website the following forms:
+    <input type="checkbox" class="filled-in" id="filled-in-box">
+    <label for="filled-in-box" class="input-label">We, the student registering and the parent/guardian registering, will fill out, sign, and submit through this website the following forms:</label>
     <h4 class="page-header">Payment Information</h4>
     <label>EVSD Annual Contribution: $250 <br>
     As reviewed in the Parent Orientation, this is the bare minimum we need to cover coaching expenses and salaries, facilities, school tournament fees, club events, financial aid & subsidies to students, league fees, professional material, and much more.
