--- a/project/client/signup.css
+++ b/project/client/signup.css
@@ -1,4 +1,7 @@
 #application-signup {
-  margin: 50px 50px 50px 50px;
-  font-size: 15;
+  margin: 5px 15px;
+}
+blockquote{
+  font-size:11px;
+  opacity:.75;
 }
