added navbar to signup form

--- a/project/client/views/signup.html
+++ b/project/client/views/signup.html
@@ -1,4 +1,19 @@
 <template name="signup">
+  <nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="nav-wrapper teal">
+        <span class="flow-text">&nbsp;&nbsp;&nbsp;EVSD</span>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li class="hidden">
+                  <a class="page-scroll" href="#page-top"></a>
+              </li>
+              <li>
+                 <a class="page-scroll btn" href="{{pathFor route='home'}}">Home</a>
+              </li>
+          </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+  </nav>
 <link rel="stylesheet" href="signup.css">
   <div id="application-signup">
     <div class="row">
@@ -99,7 +114,7 @@
             </p>
           </div>
         </div>
-
+<br>
         <h4 class="page-header">PARENT/GUARDIAN INFORMATION</h4>
 
 
