fixed radio button input format (only uses one variable)

--- a/project/client/views/signup.html
+++ b/project/client/views/signup.html
@@ -83,33 +83,33 @@
           <div class="input-field col s4">
             <p>Does the student have a Facebook account?</p>
             <p>
-              <input name="group1" type="radio" id="facebookAccounty" required/>
+              <input name="facebookAccount" type="radio" value = "yes" id = "facebookAccounty" required/>
               <label for="facebookAccounty">Yes</label>
             </p>
             <p>
-              <input name="group1" type="radio" id="facebookAccountn" required/>
-              <label for="facebookAccountn">No</label>
+              <input name="facebookAccount" type="radio" value = "no" id = "facebookAccountn" required/>
+              <label for = "facebookAccountn">No</label>
             </p>
           </div>
           <div class="input-field col s4">
             <p>Is he/she in the <a href="http://on.fb.me/1EcE7oz" target="_blank">Speech & Debate Facebook group</a>?</p>
             <p>
-              <input name="group2" type="radio" id="facebookEvsdy" required>
+              <input name="facebookEvsd" type="radio" id="facebookEvsdy" value = "yes" required>
               <label for="facebookEvsdy">Yes</label>
             </p>
             <p>
-              <input name="group2" type="radio" id="facebookEvsdn" required/>
+              <input name="facebookEvsd" type="radio" id="facebookEvsdn" value = "no" required/>
               <label for="facebookEvsdn">No</label>
             </p>
           </div>
           <div class="input-field col s4">
             <p>Is the student a part of the Speech & Debate Schoolloop group?</p>
             <p>
-              <input name="group3" type="radio" id="schoolloopEvsdy" required/>
+              <input name="schoolloopEvsd" type="radio" id="schoolloopEvsdy" value = "yes" required/>
               <label for="schoolloopEvsdy">Yes</label>
             </p>
             <p>
-              <input name="group3" type="radio" id="schoolloopEvsdn" required/>
+              <input name="schoolloopEvsd" type="radio" id="schoolloopEvsdn" value = "no" required/>
               <label for="schoolloopEvsdn">No</label>
             </p>
           </div>
