bug fix in signup page

--- a/project/client/views/signup.html
+++ b/project/client/views/signup.html
@@ -120,14 +120,10 @@
 
         <h5 class="page-header">First Parent Guardian Information</h5>
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12">
             <i class="material-icons prefix">account_circle</i>
-            <input type="text" name="firstParentFirstName" class="validate" required>
-            <label for="firstParent">First Name</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="text" name="firstParentLastName" class="validate" required>
-            <label for="firstParent">Last Name</label>
+            <input type="text" name="firstParent" class="validate" required>
+            <label for="firstParent">Name (First and Last)</label>
           </div>
         </div>
 
@@ -158,14 +154,10 @@
 
         <h5 class="page-header">Second Parent Guardian Information</h5>
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12">
             <i class="material-icons prefix">account_circle</i>
-            <input type="text" name="secondParentFirstName" class="validate" required>
-            <label for="secondParent">First Name</label>
-          </div>
-          <div class="input-field col s6">
-            <input type="text" name="secondParentLastName" class="validate" required>
-            <label for="secondParent">Last Name</label>
+            <input type="text" name="secondParent" class="validate" required>
+            <label for="secondParent">Name (First and Last)</label>
           </div>
         </div>
 
@@ -207,8 +199,8 @@
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix">help</i>
-            <textarea name="whyJoin" class="materialize-textarea"></textarea>
-            <label for="whyJoin">Why does the student want to join EVHS Speech and Debate?</label>
+            <textarea name="whyjoin" class="materialize-textarea"></textarea>
+            <label for="whyjoin">Why does the student want to join EVHS Speech and Debate?</label>
           </div>
         </div>
 
@@ -249,7 +241,7 @@
       </form>
     </div>
   </div>
-
+ 
   <script>
     Materialize.updateTextFields();
   </script>
