--- a/project/client/views/signup.html
+++ b/project/client/views/signup.html
@@ -219,6 +219,21 @@
         </p>
         <iframe src="https://drive.google.com/file/d/0B0GF5CUxnsQPRE5Yb2NZZGV3Zmc/preview" style="width:640px; height:480px;" frameborder="0"></iframe>
 
+        <br>
+        <br>
+
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>File</span>
+            <input type="file">
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text" placeholder="Upload Signed Waiver">
+          </div>
+        </div>
+
+        <br>
+
         <h4 class="page-header">Payment Information</h4>
         <blockquote>EVSD Annual Contribution: $250
         <br>
@@ -241,7 +256,7 @@
       </form>
     </div>
   </div>
- 
+
   <script>
     Materialize.updateTextFields();
   </script>
