--- a/project/client/views/login.html
+++ b/project/client/views/login.html
@@ -29,8 +29,8 @@
                <div class="row">
                  <div class="input-field col s12">
                    <i class="material-icons prefix">email</i>
-                   <input type="email" name="emailAddress" class="validate" required>
-                   <label for="emailAddress">Email</label>
+                   <input type="email" name="email" class="validate" required>
+                   <label for="email">Email</label>
                  </div>
                </div>
 
