added confirmation email reminder

--- a/project/client/views/success.html
+++ b/project/client/views/success.html
@@ -19,6 +19,7 @@
     <form id="signup-success" class="success">
       <h4 class="page-header">Sign-up Success!  Welcome to EVHS Speech & Debate! </h4>
       <h8 class="page-header">(Please check for your contribution of $250 in your credit card statement)</h8>
+      <h8 class="page-header">You will receive a confirmation email once your account has been approved by an administrator or officer</h8>
       <br><br>
     </form>
 </template>
