--- a/project/client/views/login.html
+++ b/project/client/views/login.html
@@ -41,7 +41,7 @@
                    <label for="password">Password</label>
                  </div>
                </div>
-                 <button class="btn" type="submit">Login</button>
+                 <button id="login-btn" class="btn" type="submit">Login</button>
              </form>
            </div>
          </div>
