fixes #66 and darkens suits img

--- a/project/client/views/creative.html
+++ b/project/client/views/creative.html
@@ -31,6 +31,7 @@
                 </ul>
             </div>
         </nav>
+
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
               <br><br>
@@ -51,15 +52,14 @@
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
                     <h1>This is what we do</h1>
-                    <p>Throughout the course of history, words have been some of the most powerful agents of change. Words have the power to change people's thoughts, actions, and most importantly, their hearts.
-
-Welcome to Evergreen Valley High School Speech & Debate, one of the most successful Speech & Debate programs in the nation.</p>
+                    <p>Throughout the course of history, words have been some of the most powerful agents of change. Words have the power to change people's thoughts, actions, and most importantly, their hearts.</p>
+                    <p>Welcome to Evergreen Valley High School Speech & Debate, one of the most successful Speech & Debate programs in the nation.</p>
                     <hr class="colored">
                 </div>
             </div>
         </div>
     </section>
-    <aside id = "services" class="cta-quote" style="background-image: url('https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/creative/suits.jpg');">
+    <aside id = "services" class="cta-quote" style="background-image: url('https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/creative/suits.jpg');height:30%;width:auto">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn">
