footer and suits text

--- a/project/client/views/creative.html
+++ b/project/client/views/creative.html
@@ -64,9 +64,9 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn">
                     <span class="quote">An
-                        <span class="text-primary">elite</span> training ground for the
-                    <span class="text-primary">art</span> of the
-                    <span class="text-primary">spoken word</span>.</span>
+                        <span class="text-primary" style="color:#27ae60">elite</span> training ground for the
+                    <span class="text-primary" style="color:#27ae60">art</span> of the
+                    <span class="text-primary" style="color:#27ae60">spoken word</span>.</span>
                     <hr class=" colored">
                     <a class="btn btn-outline-light page-scroll" href="#info">Learn More</a>
                 </div>
@@ -148,12 +148,12 @@
     </footer> -->
 
     <aside id = "services" class="cta-quote" style="background-image:url('https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/bg-footer.jpg');height:40%;widht:auto;"></aside>
-    <footer class="footer teal" style="padding-top:20;">
+    <footer class="footer teal" style="padding-bottom:20px;padding-top:30px">
       <div class="container">
         <div class="row">
           <div class="col l6">
-            <h5 class="white-text">Footer</h5>
-            <p class="grey-text text-lighten-4">Insert a useful footer comment.</p>
+            <h5 class="white-text">EVSD</h5>
+            <p class="grey-text text-lighten-4">An elite training ground for the art of the spoken word.</p>
           </div>
           <div class="col l6">
             <h5 class="white-text">Contact</h5>
