--- a/project/client/views/creative.html
+++ b/project/client/views/creative.html
@@ -6,7 +6,7 @@
     <title>EVSD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-    <link rel="icon" href="https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/evsdlogo.png">
+    <link rel="icon" href="https://raw.githubusercontent.com/EVSD/evsd-landing/master/evsdlogo.png">
 
 </head>
 
@@ -35,7 +35,7 @@
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
               <br><br>
-              <img src="https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/evsdlogo.png" height="300" width="300" class="center-block">
+              <img src="https://raw.githubusercontent.com/EVSD/evsd-landing/master/evsdlogo.png" height="300" width="300" class="center-block">
               <h1 class="header center teal-text">Evergreen Valley High School Speech and Debate</h1>
               <div class="row center">
                 <h5 class="header col s12 light"><a class="" href="{{pathFor route='signup'}}">Sign up</a> to get started.</h5>
@@ -59,7 +59,7 @@
             </div>
         </div>
     </section>
-    <aside id = "services" class="cta-quote" style="background-image: url('https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/creative/suits.jpg');height:30%;width:auto">
+    <aside id = "services" class="cta-quote" style="background-image: url('https://raw.githubusercontent.com/EVSD/evsd-landing/master/project/public/img/creative/suits.jpg');height:30%;width:auto">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn">
@@ -127,7 +127,7 @@
             </div>
         </div>
     </section>
-  <!-- <footer class="footer" style="background-image: url('https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/bg-footer.jpg')">
+  <!-- <footer class="footer" style="background-image: url('https://raw.githubusercontent.com/EVSD/evsd-landing/master/project/public/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 contact-details">
@@ -147,7 +147,7 @@
         </div>
     </footer> -->
 
-    <aside id = "services" class="cta-quote" style="background-image:url('https://raw.githubusercontent.com/EVSD/EVSDWebsite/master/project/public/img/bg-footer.jpg');height:40%;widht:auto;"></aside>
+    <aside id = "services" class="cta-quote" style="background-image:url('https://raw.githubusercontent.com/EVSD/evsd-landing/master/project/public/img/bg-footer.jpg');height:40%;widht:auto;"></aside>
     <footer class="footer teal" style="padding-bottom:20px;padding-top:30px">
       <div class="container">
         <div class="row">
@@ -159,7 +159,7 @@
             <h5 class="white-text">Contact</h5>
             <ul id="icons">
               <li style="display: inline"><a class="fa fa-facebook fa-2x white-text" href="http://on.fb.me/1EcE7oz" target="_blank"></a></li>&nbsp;&nbsp;&nbsp;&nbsp;
-              <li style="display: inline"><a class="fa fa-github fa-2x white-text" href="https://github.com/EVSD/EVSDWebsite" target="_blank"></a></li>&nbsp;&nbsp;&nbsp;&nbsp;
+              <li style="display: inline"><a class="fa fa-github fa-2x white-text" href="https://github.com/EVSD/evsd-landing" target="_blank"></a></li>&nbsp;&nbsp;&nbsp;&nbsp;
               <li style="display: inline"><a class="fa fa-envelope fa-2x white-text" href="mailto:evhs.sd@gmail.com" target="_blank"></a></li>
             </ul>
           </div>
@@ -168,7 +168,7 @@
       <!--css vitality mixes with materialize here so make sure footer background colors are the same for now-->
       <div class="footer-copyright">
         <div class="container">
-          <a href="https://github.com/EVSD/EVSDWebsite">&copy; EVSD Webmasters</a>
+          <a href="https://github.com/EVSD/evsd-landing">&copy; EVSD Webmasters</a>
           <a class="grey-text text-lighten-2 right" href="https://tldrlegal.com/license/mit-license">MIT License</a>
         </div>
       </div>
