copyright footer link to new tab

--- a/project/client/views/creative.html
+++ b/project/client/views/creative.html
@@ -168,8 +168,8 @@
       <!--css vitality mixes with materialize here so make sure footer background colors are the same for now-->
       <div class="footer-copyright">
         <div class="container">
-          <a href="https://github.com/EVSD/evsd-landing">&copy; EVSD Webmasters</a>
-          <a class="grey-text text-lighten-2 right" href="https://tldrlegal.com/license/mit-license">MIT License</a>
+          <a href="https://github.com/EVSD/evsd-landing" target="_blank">&copy; EVSD Webmasters</a>
+          <a class="grey-text text-lighten-2 right" href="https://tldrlegal.com/license/mit-license" target="_blank">MIT License</a>
         </div>
       </div>
     </footer>
