--- a/project/client/views/creative.html
+++ b/project/client/views/creative.html
@@ -14,7 +14,7 @@
     <!-- Navigation -->
         <nav>
             <div class="nav-wrapper teal z-depth-2">
-              <span class="flow-text">&nbsp;&nbsp;&nbsp;EVSD</span>
+              <span class="flow-text" onClick="window.location.reload()">&nbsp;&nbsp;&nbsp;EVSD</span>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
