fixes #70 for all pages

--- a/project/client/views/signup.html
+++ b/project/client/views/signup.html
@@ -2,7 +2,7 @@
   <nav>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="nav-wrapper teal">
-        <span class="flow-text">&nbsp;&nbsp;&nbsp;EVSD</span>
+        <span class="flow-text" onClick="window.location.reload()">&nbsp;&nbsp;&nbsp;EVSD</span>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li class="hidden">
                   <a class="page-scroll" href="#page-top"></a>
