--- a/project/client/views/creative.html
+++ b/project/client/views/creative.html
@@ -127,6 +127,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Old footer -->
   <!-- <footer class="footer" style="background-image: url('https://raw.githubusercontent.com/EVSD/evsd-landing/master/project/public/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
@@ -165,7 +167,7 @@
           </div>
         </div>
       </div>
-      <!--css vitality mixes with materialize here so make sure footer background colors are the same for now-->
+      
       <div class="footer-copyright">
         <div class="container">
           <a href="https://github.com/EVSD/evsd-landing" target="_blank">&copy; EVSD Webmasters</a>
